--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgb(23, 19, 1);
+    color: rgb(10, 0, 0);
     text-align: center;
     font-size: 16px;
     background-image: url(https://cdna.artstation.com/p/assets/images/images/066/635/462/original/den-pixelart-watertiles.gif?1693393538);
@@ -25,13 +25,16 @@ h2 {
     text-align: center;
     max-width: 700px;
     margin: 0 auto 1em auto;  
+    font-size: 2em;
+    color: rgb(7, 28, 8);
 }
  ul {
     text-align: left;
+    font-size: 2em;
 }
 
 ul {
-    padding-left: 500px;
+    padding-left: 400px;
 }
 
 table {
@@ -39,13 +42,17 @@ table {
     color:white; 
     width: 50%;
     box-shadow:rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;;
+    font-size: 2em;
 }
 th, td {
     border: 1px solid #555;
-    padding: 40px;
+    padding: 50px;
 }
 
 .little {
     width: 250px;
 }
 
+a:hover {
+    text-shadow: 1px 2px 2px;
+}
